# invisicalc

./: .gitignore  LICENSE  Makefile  README.md  calculator.py  meson.build  org.gnome.invisicalc.json  style.css
.pc/: applied-patches
.pc/0001-add-manpage.patch/: meson.build
.pc/0002-update-manpage.patch/: README.md  meson.build  org.gnome.invisicalc.json
.pc/whatever/src/: invisicalc-application.c
_archive/invisicalc-python-version/: README.md  calculator.py  style.css
_archive/invisicalc-workbench/: main.blp  main.css  settings
data/: meson.build  org.gnome.invisicalc.desktop.in  org.gnome.invisicalc.gschema.xml  org.gnome.invisicalc.metainfo.xml.in  org.gnome.invisicalc.service.in
data/icons/: meson.build
debian/: changelog  control  debhelper-build-stamp  files  gbp.conf  invisicalc.substvars  rules
debian/.debhelper/invisicalc/: dbgsym-build-ids
debian/.debhelper/invisicalc/dbgsym-root/DEBIAN/: control  md5sums
debian/invisicalc/DEBIAN/: control  md5sums
debian/invisicalc/usr/share/applications/: org.gnome.invisicalc.desktop
debian/invisicalc/usr/share/dbus-1/services/: org.gnome.invisicalc.service
debian/invisicalc/usr/share/metainfo/: org.gnome.invisicalc.metainfo.xml
debian/patches.unused/: 0001-add-manpage.patch  0002-update-manpage.patch  whatever
debian/source/: options
man/: invisicalc.1
po/: POTFILES.in  meson.build
src/: invisicalc-application.c  invisicalc-application.h  invisicalc-window.c  invisicalc-window.h  invisicalc-window.ui  invisicalc.gresource.xml  main.blp  main.c  main.css  meson.build
(+2 files in other folders)
